--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         </div>
       </div>
     </div>
-    <script src="random.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
